# opensearch-per-hit-alert

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
.github/workflows/: docker-image.yml
src/: channels.rs  config.rs  main.rs  notifier.rs  opensearch_watcher.rs
