[package]
name = "wazuh-per-hit-alert"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"]}
toml = "0.8.14"
opensearch = "2.2.0"
tokio = { version = "*", features = ["full"] }
serde_json = "1.0.124"
chrono = "0.4.38"
handlebars = "6.0.0"
